--- a/docs/source/examples/demo.ipynb
+++ b/docs/source/examples/demo.ipynb
@@ -5,12 +5,12 @@
    "id": "c9d7f650",
    "metadata": {},
    "source": [
-    "# Compute BlocRes Evaluation"
+    "# Scipion Bridge Demo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "60afa068-1149-4c02-bfd0-40d92c92f7f7",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "5057b89e-44f4-462b-a5e3-b2aac5d65f52",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "0ce8ff5a-10c8-4d51-a0eb-5fad145dd945",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
        "EMDBMetadata(pdb_id='7l70', resolution=3.1, sampling=0.835, size=256, org_x=0, org_y=0, org_z=0)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "id": "4fa68922-f07b-429f-8d67-545357fad81f",
    "metadata": {},
    "outputs": [
@@ -98,44 +98,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_volume_from_pdb -i data/downloaded/pdb8tqo.ent -o /tmp/tmp_2969cjl --centerPDB -v 0 --sampling 0.835 --size 256\n",
-      "Xmipp command detected\n",
-      "Scipion v3.7.1 - Eugenius\n",
-      "[XMIPP] scipion run xmipp_volume_align --i1 data/downloaded/emd_41510.map --i2 /tmp/tmp_2969cjl.vol --local --apply /tmp/tmpjqimc0r_.vol\n",
-      "1 (1,0,0,0,0,1,0,0,0)--->-0.349795\n",
-      "   (1,0,***0.709587,0,0,1,0,0,0)--->-0.354899\n",
-      "   (1,0,0.709587,***0.889898,0,1,0,0,0)--->-0.359015\n",
-      "   (1,0,0.709587,0.889898,***-2.02647,1,0,0,0)--->-0.364126\n",
-      "   (1,0,0.709587,0.889898,-2.02647,***1.0526,0,0,0)--->-0.372631\n",
-      "   (1,0,0.709587,0.889898,-2.02647,1.0526,***-4.86482,0,0)--->-0.388258\n",
-      "   (1,0,0.709587,0.889898,-2.02647,1.0526,-4.86482,***3.64532,0)--->-0.465488\n",
-      "   (1,0,0.709587,0.889898,-2.02647,1.0526,-4.86482,3.64532,***2.76693)--->-0.558715\n",
-      "2 (1,0,0.709587,0.889898,-2.02647,1.0526,-4.86482,3.64532,2.76693)--->-0.558715\n",
-      "   (1,0,***2.07012,0.889898,-2.02647,1.0526,-4.86482,3.64532,2.76693)--->-0.576119\n",
-      "   (1,0,2.07012,***0.261686,-2.02647,1.0526,-4.86482,3.64532,2.76693)--->-0.579633\n",
-      "   (1,0,2.07012,0.261686,***-2.07067,1.0526,-4.86482,3.64532,2.76693)--->-0.579657\n",
-      "   (1,0,2.07012,0.261686,-2.07067,***1.00105,-4.86482,3.64532,2.76693)--->-0.723017\n",
-      "   (1,0,2.07012,0.261686,-2.07067,1.00105,***-4.89737,3.64532,2.76693)--->-0.723091\n",
-      "   (1,0,2.07012,0.261686,-2.07067,1.00105,-4.89737,***3.76995,2.76693)--->-0.723845\n",
-      "   (1,0,2.07012,0.261686,-2.07067,1.00105,-4.89737,3.76995,***2.72043)--->-0.723931\n",
-      "3 (1,0,2.07012,0.261686,-2.07067,1.00105,-4.89737,3.76995,2.72043)--->-0.723931\n",
-      "   (1,0,***2.0461,0.261686,-2.07067,1.00105,-4.89737,3.76995,2.72043)--->-0.723942\n",
-      "   (1,0,2.0461,***0.294048,-2.07067,1.00105,-4.89737,3.76995,2.72043)--->-0.72397\n",
-      "   (1,0,2.0461,0.294048,***-2.06749,1.00105,-4.89737,3.76995,2.72043)--->-0.72397\n",
-      "   (1,0,2.0461,0.294048,-2.06749,***1.00104,-4.89737,3.76995,2.72043)--->-0.72397\n",
-      "   (1,0,2.0461,0.294048,-2.06749,1.00104,***-4.88941,3.76995,2.72043)--->-0.723976\n",
-      "   (1,0,2.0461,0.294048,-2.06749,1.00104,-4.88941,***3.77281,2.72043)--->-0.723977\n",
-      "   (1,0,2.0461,0.294048,-2.06749,1.00104,-4.88941,3.77281,***2.72281)--->-0.723977\n",
-      "The best correlation is for\n",
-      "Scale                  : 1.00104\n",
-      "Translation (X,Y,Z)    : 2.72281 3.77281 -4.88941\n",
-      "Rotation (rot,tilt,psi): 2.0461 0.294048 -2.06749\n",
-      "Best grey scale       : 1\n",
-      "Best grey shift       : 0\n",
-      "Fitness value         : -0.723977\n",
-      "xmipp_transform_geometry will require the following values\n",
-      "   Angles: 2.0461 0.294048 -2.06749\n",
-      "   Shifts: 2.74644 3.77473 -4.87469\n",
+      "[XMIPP] scipion run xmipp_volume_from_pdb -i data/downloaded/pdb8tqo.ent -o /tmp/tmpgkgbrr_n --centerPDB -v 0 --sampling 0.835 --size 256\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n"
      ]
@@ -143,7 +106,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e744ce495144e688fead2904d13c860",
+       "model_id": "b9e3103a0a714901be0f0f9e0892f7eb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -163,41 +126,13 @@
     "    size=metadata.size,\n",
     ").typed(astype=scipion_bridge.typed.volume.SpiderFile, copy_data=False)\n",
     "\n",
-    "volume = scipion.xmipp_volume_align(\n",
-    "    embdb_map=emdb_map,\n",
-    "    volume=volume,\n",
-    "    local=True,\n",
-    ")\n",
+    "# volume = scipion.xmipp_volume_align(\n",
+    "#     embdb_map=emdb_map,\n",
+    "#     volume=volume,\n",
+    "#     local=True,\n",
+    "# )\n",
     "\n",
     "volume"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "0e87a595-d754-40e6-829e-100a1027bff9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d83f289134140fe9446a0b3fe9540e6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='i', max=255), Output()), _dom_classes=('widget-interact'…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "from ipywidgets import interact, IntSlider\n",
-    "@interact(i=IntSlider(min=0, max=255))\n",
-    "def plot_slices(i=125):\n",
-    "    plt.imshow(np.array(volume)[i], cmap=\"gray\")"
    ]
   },
   {
@@ -211,27 +146,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "342ccc7d-ee34-4e14-97a0-766947564153",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<scipion_bridge.typed.volume.SpiderFile at 0x7a02242fc1c0>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "volume"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "5e3614f1-ead8-4149-bb65-f7f47d9cdf9b",
    "metadata": {},
@@ -241,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "id": "9f69f91b-8f60-4e7e-853a-4c5355ffb949",
    "metadata": {},
    "outputs": [
@@ -249,17 +163,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmpkzz5xy7e.vol -o /tmp/tmpfw9sjx3z.vol --select below 0.02 --substitute binarize\n",
-      "Input File: /tmp/tmpkzz5xy7e.vol\n",
-      "Output File: /tmp/tmpfw9sjx3z.vol\n",
+      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmpgkgbrr_n.vol -o /tmp/tmpr9oh5w83.vol --select below 0.02 --substitute binarize\n",
+      "Input File: /tmp/tmpgkgbrr_n.vol\n",
+      "Output File: /tmp/tmpr9oh5w83.vol\n",
       "Xmipp command detected\n",
-      "Scipion v3.7.1 - Eugenius\n"
+      "Scipion v3.7.1 - Eugenius\n",
+      "Number of non-zero elements: 487083\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c7f6199f1f54841929eae7c66f1d653",
+       "model_id": "df0b0507c7b647d7aa7053d14758ef13",
        "version_major": 2,
        "version_minor": 0
       },
@@ -279,12 +194,44 @@
     "    volume, select=\"below 0.02\", substitute=\"binarize\"\n",
     ")\n",
     "\n",
+    "print(f\"Number of non-zero elements: {np.count_nonzero(mask)}\")\n",
+    "\n",
     "mask"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
+   "id": "0e87a595-d754-40e6-829e-100a1027bff9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0522afd1e91e453788df5f2b1a900d8d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=0, description='i', max=255), Output()), _dom_classes=('widget-interact'…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from ipywidgets import interact, IntSlider\n",
+    "@interact(i=IntSlider(min=0, max=255))\n",
+    "def plot_slices(i=125):\n",
+    "    fig, (ax_1, ax_2) = plt.subplots(1, 2)\n",
+    "    ax_1.imshow(np.array(mask)[i], cmap=\"gray\")\n",
+    "    ax_2.imshow(np.array(volume)[i], cmap=\"gray\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "id": "bc70ab1b-0f73-4eba-a790-7c3f5840fe72",
    "metadata": {},
    "outputs": [
@@ -292,9 +239,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmpdg8wswwh.vol -o /tmp/tmpv1hqd8_1.vol --select above 0.5 --substitute binarize\n",
-      "Input File: /tmp/tmpdg8wswwh.vol\n",
-      "Output File: /tmp/tmpv1hqd8_1.vol\n",
+      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmpqtvpk5ky.vol -o /tmp/tmpukjmuyo1.vol --select below 0.5 --substitute binarize\n",
+      "Input File: /tmp/tmpqtvpk5ky.vol\n",
+      "Output File: /tmp/tmpukjmuyo1.vol\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n"
      ]
@@ -302,7 +249,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5a47c87b81944e049740db900053a82e",
+       "model_id": "501994f25a634010a5c59b0464e6693a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -315,76 +262,41 @@
     }
    ],
    "source": [
-    "np_array = np.random.normal(-1, 1, [256, 256, 256])\n",
-    "scipion.xmipp_transform_threshold(\n",
-    "    np_array, select=\"above 0.5\", substitute=\"binarize\"\n",
-    ")"
+    "shape = (256, 256, 256)\n",
+    "z, y, x = np.indices(shape)\n",
+    "\n",
+    "center = np.array(shape) / 2\n",
+    "radius = 100\n",
+    "\n",
+    "dist_squared = (x - center[2])**2 + (y - center[1])**2 + (z - center[0])**2\n",
+    "sphere_mask = dist_squared <= radius**2\n",
+    "\n",
+    "sphere_mask = scipion.xmipp_transform_threshold(\n",
+    "    sphere_mask, select=\"below 0.5\", substitute=\"binarize\"\n",
+    ")\n",
+    "\n",
+    "sphere_mask"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "f177ec3e-98a1-41b2-b5ff-f3b79f3ffba9",
+   "execution_count": 36,
+   "id": "ed91620c-71ef-4160-8b57-99a72f7fe5d9",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Scipion v3.7.1 - Eugenius\n",
-      "Xmipp command detected\n",
-      "This method will return the plugin class in the future. Please use getPluginModule instead\n",
-      "\u001b[1;31mPROGRAM\u001b[0m\n",
-      "   xmipp_transform_threshold\n",
-      "\u001b[1;31mUSAGE\u001b[0m\n",
-      "   Threshold volumes and images \n",
-      "\u001b[1;31mSEE ALSO\u001b[0m\n",
-      "   transform_mask, transform_morphology\n",
-      "\u001b[1;31mOPTIONS\u001b[0m\n",
-      "\n",
-      "   \u001b[1;34m-i\u001b[0m, --input <input_file>\n",
-      "          Input file: metadata, stack, volume or image. \n",
-      "   [\u001b[1;32m-o\u001b[0m, --output <output_file=>]\n",
-      "          Output file: metadata, stack, volume or image. \n",
-      "   [\u001b[1;32m--oroot\u001b[0m <root=>]\n",
-      "          Rootname of output individual images. \n",
-      "          Output image format can be set adding extension after rootname as \":ext\". \n",
-      "   \u001b[1;34m--select\u001b[0m <mode>\n",
-      "           Select pixels meeting \n",
-      "      where <mode> can be:\n",
-      "        abs_below <th>\n",
-      "           Absolute value below a threshold \n",
-      "        below <th>\n",
-      "           Below a threshold \n",
-      "        above <th>\n",
-      "           Above a threshold \n",
-      "   \u001b[1;34m--substitute\u001b[0m <substitutionMode=value>\n",
-      "           Substitute selected pixels by \n",
-      "      where <substitutionMode> can be:\n",
-      "        binarize\n",
-      "           Selected are set to 0, non-selected to 1 \n",
-      "        value <new=0>\n",
-      "           New value \n",
-      "        noise <avg=0> <stddev=1>\n",
-      "           Gaussian noise \n",
-      "        avg\n",
-      "           Average of non-selected \n",
-      "\n",
-      "\u001b[1;31m Common options \u001b[0m\n",
-      "   [\u001b[1;32m--more\u001b[0m]\n",
-      "           Show additional options. \n",
-      "\u001b[1;31mEXAMPLES\u001b[0m\n",
-      "   Threshold a volume below a threshold\n",
-      "      \u001b[1;34mxmipp_transform_threshold -i volume.vol -o volumeThresholded.vol --select below 0.01 --substitute value 0\u001b[0m\n",
-      "   Generate a binary mask based on a threshold and apply it\n",
-      "      \u001b[1;34mxmipp_transform_threshold -i volume.vol -o mask.vol --select below 0.5 --substitute binarize\u001b[0m\n",
-      "      \u001b[1;34mxmipp_transform_morphology -i mask.vol --dil\u001b[0m\n",
-      "      \u001b[1;34mxmipp_transform_mask -i volume.vol -o volumeMasked.vol --mask mask.vol\u001b[0m\n"
-     ]
+     "data": {
+      "text/plain": [
+       "4187857"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "!scipion run xmipp_transform_threshold"
+    "np.count_nonzero(sphere_mask)"
    ]
   },
   {
